# git-ia-assistant

./: .gitignore  .gitmodules  .output.txt  CHANGELOG.md  GEMINI.md  README.md  dev-setup.sh  gemini_source.html  install.sh  outil_commit_developpement.md  pyproject.toml  requirements.txt
.gemini/: settings.json
.github/: copilot-instructions.md
doc/: architecture.md  configuration.md  fonctionnalites.md  installation.md  laboratoire.md  mcp.md  menu_interactif.md  usage.md
laboratoire/: PROPOSITIONS.md
laboratoire/api-doc/: outil_api_documentation.md
laboratoire/cicd/: outil_cicd_pipeline.md
laboratoire/coverage/: outil_coverage_tests.md
laboratoire/database/: outil_database_schema.md
laboratoire/dependencies/: outil_dependances_intelligentes.md
laboratoire/git/: outil_commit_developpement.md
laboratoire/ia/: code_explainer.md
laboratoire/jira/: outil_jira.md  workflow_commit_sync.md
laboratoire/lint/: outil_lint_format.md
laboratoire/migration/: outil_migration_code.md
laboratoire/performance/: outil_performance_audit.md
laboratoire/scaffold/: README.md
laboratoire/scenarios/: journee_dev.md  journee_type_developpeur.md
laboratoire/security/: outil_security_policy.md
laboratoire/sonar/: outil_sonar.md
src/git_ia_assistant/cli/: changelog_cli.py  commit_cli.py  commit_version_cli.py  doc_cli.py  explain_cli.py  ia_menu.py  mr_cli.py  mr_review_cli.py  refacto_cli.py  review_cli.py  review_my_code_cli.py  squash_cli.py  test_cli.py
src/git_ia_assistant/cli/code_quality/: doc_cli.py  refacto_cli.py  test_cli.py
src/git_ia_assistant/cli/commits/: commit_cli.py  commit_mcp_cli.py  commit_v2.py  commit_version_cli.py  squash_cli.py
src/git_ia_assistant/cli/git_history/: changelog_cli.py  explain_cli.py
src/git_ia_assistant/cli/mcp/: mcp_config_manager.py
src/git_ia_assistant/cli/menu/: __init__.py  ia_menu.py
src/git_ia_assistant/cli/review/: mr_review_cli.py  mr_review_mcp_cli.py  review_my_code_cli.py
src/git_ia_assistant/cli/sonar/: __init__.py  analyse_qualite_code.py
src/git_ia_assistant/config/: ia_menu.yaml
src/git_ia_assistant/core/: __init__.py  commit_cli_helpers.py
src/git_ia_assistant/core/cli_helpers/: commit_cli_helpers.py  dispatcher_factory.py  dispatcher_helpers.py  git_ui_helpers.py  local_commit_helpers.py  local_mr_mcp_review_helpers.py  local_mr_review_helpers.py
src/git_ia_assistant/core/cli_mcp_helpers/: __init__.py  local_mcp_commit_helpers.py
src/git_ia_assistant/core/definition/: __init__.py  ia_assistant.py  ia_assistant_changelog.py  ia_assistant_changelog_factory.py  ia_assistant_commit.py  ia_assistant_commit_factory.py  ia_assistant_doc.py  ia_assistant_doc_factory.py  ia_assistant_explain.py  ia_assistant_explain_factory.py  ia_assistant_mr.py  ia_assistant_mr_factory.py  ia_assistant_refacto.py  ia_assistant_refacto_factory.py  ia_assistant_squash.py  ia_assistant_squash_factory.py  ia_assistant_test.py  ia_assistant_test_factory.py  ia_assistant_type_review.py  ia_assistant_type_review_factory.py
src/git_ia_assistant/core/utils/: review_prompt.py
src/git_ia_assistant/debug/: __init__.py
src/git_ia_assistant/debug/mr_cli/: diagnose_gitlab_auth.py
src/git_ia_assistant/debug/mr_review_cli/: README_TROUBLESHOOTING.md  __init__.py
src/git_ia_assistant/ia/copilot/: __init__.py  copilot_angular_review.py  copilot_java_review.py  copilot_python_review.py  copilot_utils.py  ia_assistant_copilot_angular_review.py  ia_assistant_copilot_commit.py  ia_assistant_copilot_commit_mcp.py  ia_assistant_copilot_java_review.py  ia_assistant_copilot_python_review.py  ia_copilot_changelog.py  ia_copilot_doc.py  ia_copilot_explain.py  ia_copilot_mr.py  ia_copilot_mr_mcp.py  ia_copilot_refacto.py  ia_copilot_squash.py  ia_copilot_test.py
src/git_ia_assistant/ia/gemini/: __init__.py  gemini_angular_review.py  gemini_java_review.py  gemini_python_review.py  ia_assistant_gemini_angular_review.py  ia_assistant_gemini_commit.py  ia_assistant_gemini_commit_mcp.py  ia_assistant_gemini_java_review.py  ia_assistant_gemini_python_review.py  ia_gemini_changelog.py  ia_gemini_doc.py  ia_gemini_explain.py  ia_gemini_mr.py  ia_gemini_mr_mcp.py  ia_gemini_refacto.py  ia_gemini_squash.py  ia_gemini_squash.py.old  ia_gemini_test.py
src/git_ia_assistant/ia/ollama/: __init__.py  ia_assistant_ollama_angular_review.py  ia_assistant_ollama_commit.py  ia_assistant_ollama_commit_mcp.py  ia_assistant_ollama_java_review.py  ia_assistant_ollama_python_review.py  ia_ollama_changelog.py  ia_ollama_doc.py  ia_ollama_explain.py  ia_ollama_mr.py  ia_ollama_mr_mcp.py  ia_ollama_refacto.py  ia_ollama_squash.py  ia_ollama_test.py  ollama_angular_review.py  ollama_java_review.py  (+3 more)
src/git_ia_assistant/prompts/: README.md  angular_review_prompt.md  changelog_prompt.md  commit_message_prompt.md  explain_prompt.md  mr_review_prompt.md  mr_review_prompt.md.backup  optimise_commit_prompt.md  python_review_prompt.md  refacto_prompt.md  review_prompt.py  squash_prompt.md  test_generation_prompt.md
(+15 files in other folders)
