[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "git-ia-assistant"
version = "0.9.9"
authors = [
  { name="stef38-code", email="73640160+stef38-code@users.noreply.github.com" },
]
description = "Assistant Git propulsé par l'IA pour les commits, revues et changelogs."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "google-genai",
    "GitPython",
    "requests",
    "pydantic",
    "InquirerPy",
    "python-gitlab",
    "PyGithub",
    "tomli; python_version < '3.11'",
    "tomli_w",
    "toml>=0.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
git-ia-commit = "git_ia_assistant.cli.commits.commit_cli:main"
git-ia-commit-v2 = "git_ia_assistant.cli.commits.commit_v2:main"
git-ia-commit-version = "git_ia_assistant.cli.commits.commit_version_cli:main"
git-ia-review = "git_ia_assistant.cli.review.review_my_code_cli:main"
git-ia-mr = "git_ia_assistant.cli.review.mr_review_cli:main"
git-ia-squash = "git_ia_assistant.cli.commits.squash_cli:main"
git-ia-changelog = "git_ia_assistant.cli.git_history.changelog_cli:main"
git-ia-explain = "git_ia_assistant.cli.git_history.explain_cli:main"
git-ia-test = "git_ia_assistant.cli.code_quality.test_cli:main"
git-ia-doc = "git_ia_assistant.cli.code_quality.doc_cli:main"
git-ia-refacto = "git_ia_assistant.cli.code_quality.refacto_cli:main"
git-ia-menu = "git_ia_assistant.cli.ia_menu:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"git_ia_assistant" = [
    "config/*.yaml",
    "prompts/*.md",
    "prompts/commits/*.md",
    "prompts/review/*.md",
    "prompts/code_quality/*.md",
    "prompts/git_history/*.md"
]
